# libredwg

./: configure.ac
bindings/gambas/: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  aclocal.m4  configure.ac  relink.sh
bindings/gambas/src/: CDwgDocument.cpp  CDwgDocument.h  Makefile.am  gb.dwg.component  main.cpp  main.h
doc/: LibreDWG.texi  dynapi.texi
include/: dwg.h
programs/: Makefile.am  alive.test.in  dwg2SVG.1  dwg2dxf.1  dwg2ps.1  dwgbmp.1  dwgfilter.1  dwggrep.1  dwglayers.1  dwgread.1  dwgread.c  dwgrewrite.1  dwgwrite.1  dwgwrite.c  dxf2dwg.1  dxf2dwg.c  dxfwrite.1  dxfwrite.c
src/: bits.c  bits.h  classes.inc  common.h  config.h.in  decode.c  decode.h  decode_r2007.c  dwg.c  dwg.spec  dynapi.c  encode.c  gen-dynapi.pl  in_dxf.c  in_json.c  out_dxf.c  out_dxfb.c  out_json.c  r2004_file_header.spec  spec.h
test/unit-testing/: common.c  decode_test.c  dynapi_test.c  tablestyle.c
